--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "rsk-simulation"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+gui = ["dep:bevy"]
+default = ["gui"]
 
 [dependencies]
+rapier2d = { version = "0.18.0", features = [
+    "simd-stable"
+] }
+bevy = { version = "*", optional = true }
