--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,20 @@ default = ["bevy_gui"]
 rapier2d = { version = "0.18.0", features = [
     "simd-stable"
 ] }
-bevy = { version = "*", optional = true }
+log = "0.4.21"
+bevy = { version = "0.13.2", features = [
+    "jpeg"
+], optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_log = "1.0.0"
+wasm_thread = "0.3.0"
+console_error_panic_hook = "0.1.7"
+
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
