--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,10 @@ standard_game_controller = []
 default = ["bevy_gui", "standard_game_controller"]
 
 [dependencies]
-rapier2d = { version = "0.18.0", features = [
-    "simd-stable"
-] }
+rapier2d = { version = "0.18.0", features = ["simd-stable"] }
 log = "0.4.21"
-bevy = { version = "0.13.2", features = [
-    "jpeg"
-], optional = true }
+bevy = { version = "0.13.2", features = ["jpeg"], optional = true }
+nalgebra = { version = "0.32.5", features = ["convert-glam025"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_log = "1.0.0"
