--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,59 @@ edition = "2021"
 # GUIs
 gui = []
 bevy_gui = ["dep:bevy", "gui"]
+http_gui = [
+    "rapier2d/serde-serialize",
+    "gui",
+
+    # wasm-server-runner
+    "dep:anyhow",
+    "dep:tracing",
+    "dep:tracing-subscriber",
+    "dep:wasm-bindgen-cli-support",
+    "dep:axum",
+    "dep:axum-extra",
+    "dep:axum-server",
+    "dep:axum-server-dual-protocol",
+    "dep:directories",
+    "dep:tokio",
+    "dep:tower-http",
+    "dep:http",
+    "dep:tower",
+    "dep:fastrand",
+    "dep:rcgen"
+]
 
 # Game controllers
 standard_game_controller = []
 
-default = ["bevy_gui", "standard_game_controller"]
+default = ["http_gui", "standard_game_controller"]
 
 [dependencies]
 rapier2d = { version = "0.18.0", features = [
-    "simd-stable"
+    "simd-stable",
+    "serde-serialize"
 ] }
 log = "0.4.21"
 bevy = { version = "0.13.2", features = [
     "jpeg"
 ], optional = true }
+
+# wasm-server-runner
+anyhow = { version = "1.0", optional = true }
+tracing = { version = "0.1", default-features = false, features = ["release_max_level_debug"], optional = true }
+tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
+wasm-bindgen-cli-support = { version = "0.2", optional = true }
+axum = { version = "0.7", default-features = false, features = ["http1", "ws"], optional = true }
+axum-extra = { version = "0.9", features = [], optional = true }
+axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }
+axum-server-dual-protocol = { version = "0.6", optional = true }
+directories = { version = "5", optional = true }
+tokio = { version = "1.11", default-features = false, features = ["rt-multi-thread"], optional = true }
+tower-http = { version = "0.5", features = ["compression-full", "fs", "set-header", "trace"], optional = true }
+http = { version = "1.0", optional = true }
+tower = { version = "0.4", optional = true }
+fastrand = { version = "2.0", optional = true }
+rcgen = { version = "0.12", default-features = false, features = ["ring"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_log = "1.0.0"
