--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ bevy_gui = ["dep:bevy", "gui"]
 http_gui = [
     "rapier2d/serde-serialize",
     "gui",
+    "serde",
+
+    # Web socket
+    "dep:tokio-tungstenite",
 
     # wasm-server-runner
     "dep:anyhow",
@@ -32,6 +36,8 @@ http_gui = [
 # Game controllers
 standard_game_controller = []
 
+serde = ["dep:serde"]
+
 default = ["http_gui", "standard_game_controller"]
 
 [dependencies]
@@ -40,8 +46,14 @@ rapier2d = { version = "0.18.0", features = [
     "serde-serialize"
 ] }
 log = "0.4.21"
-bevy = { version = "0.13.2", features = ["jpeg"], optional = true }
 nalgebra = { version = "0.32.5", features = ["convert-glam025"] }
+
+serde = { version = "1.0.198", features = ["derive"], optional = true }
+
+bevy = { version = "0.13.2", features = ["jpeg"], optional = true }
+
+# Web socket
+tokio-tungstenite = { version = "0.21.0", optional = true }
 
 # wasm-server-runner
 anyhow = { version = "1.0", optional = true }
