--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,11 +48,14 @@ rapier2d = { version = "0.18.0", features = [
 log = "0.4.21"
 nalgebra = { version = "0.32.5", features = ["convert-glam025"] }
 
-serde = { version = "1.0.198", features = ["derive"], optional = true }
-
 bevy = { version = "0.13.2", features = ["jpeg"], optional = true }
 
+# serde
+serde = { version = "1.0.198", features = ["derive"], optional = true }
+serde_json = "1.0.116"
+
 # Web socket
+tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "sync"], optional = true }
 tokio-tungstenite = { version = "0.21.0", optional = true }
 
 # wasm-server-runner
@@ -65,7 +68,6 @@ axum-extra = { version = "0.9", features = [], optional = true }
 axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }
 axum-server-dual-protocol = { version = "0.6", optional = true }
 directories = { version = "5", optional = true }
-tokio = { version = "1.11", default-features = false, features = ["rt-multi-thread"], optional = true }
 tower-http = { version = "0.5", features = ["compression-full", "fs", "set-header", "trace"], optional = true }
 http = { version = "1.0", optional = true }
 tower = { version = "0.4", optional = true }
