--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ bevy_gui = ["dep:bevy", "gui"]
 http_gui = [
     "rapier2d/serde-serialize",
     "gui",
-    "serde",
+    "http",
+    "bitcode",
 
     # Web socket
+    "dep:websocket",
     "dep:tokio-tungstenite",
 
     # wasm-server-runner
@@ -35,10 +37,18 @@ http_gui = [
 
 # Game controllers
 standard_game_controller = []
+http_game_controller = [
+    "http",
+    "dep:wasm-sockets",
+    "bitcode"
+]
 
 serde = ["dep:serde"]
+json = ["serde", "dep:serde_json"]
+http = []
+bitcode = ["serde", "dep:bitcode"]
 
-default = ["http_gui", "standard_game_controller"]
+default = ["http_gui"]
 
 [dependencies]
 rapier2d = { version = "0.18.0", features = [
@@ -52,11 +62,15 @@ bevy = { version = "0.13.2", features = ["jpeg"], optional = true }
 
 # serde
 serde = { version = "1.0.198", features = ["derive"], optional = true }
-serde_json = "1.0.116"
+serde_json = { version = "1.0.116", optional = true }
+bitcode = { version = "0.6", features = ["serde"], optional = true }
 
-# Web socket
-tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "sync"], optional = true }
+# Web socket (server)
+websocket = { version = "0.27", default-features = false, features = ["sync"], optional = true }
 tokio-tungstenite = { version = "0.21.0", optional = true }
+
+# Web socket (client)
+wasm-sockets = { version = "1.0", optional = true }
 
 # wasm-server-runner
 anyhow = { version = "1.0", optional = true }
@@ -69,7 +83,8 @@ axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }
 axum-server-dual-protocol = { version = "0.6", optional = true }
 directories = { version = "5", optional = true }
 tower-http = { version = "0.5", features = ["compression-full", "fs", "set-header", "trace"], optional = true }
-http = { version = "1.0", optional = true }
+tokio = { version = "1.37", default-features = false, features = ["rt-multi-thread"], optional = true }
+http = { version = "1.1", optional = true }
 tower = { version = "0.4", optional = true }
 fastrand = { version = "2.0", optional = true }
 rcgen = { version = "0.12", default-features = false, features = ["ring"], optional = true }
