--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,32 +46,44 @@ http_gc = [
     "bitcode"
 ]
 
-serde = ["dep:serde", "rapier2d/serde-serialize"]
+# Control
+control = [
+    "standard_gc", # For now, control is only working with standard_gc
+    "json",
+    "dep:zmq",
+    "dep:uuid"
+]
+
+serde = ["dep:serde", "rapier2d-f64/serde-serialize"]
 json = ["serde", "dep:serde_json"]
 http = []
 bitcode = ["serde", "dep:bitcode"]
 async = []
 
-default_native = ["standard_gc", "bevy_gui"]
-default_server = ["standard_gc", "http_gui"]
+default_native = ["control", "standard_gc", "bevy_gui"]
+default_server = ["control", "standard_gc", "http_gui"]
 default_client = ["http_gc", "bevy_gui"]
-default = ["default_native"]
+default = ["default_client"]
 
 [dependencies]
-rapier2d = { version = "0.18.0", features = ["simd-stable"] }
+rapier2d-f64 = { version = "0.19", features = ["simd-stable"] }
 tracing = "0.1"
-nalgebra = { version = "0.32.5", features = ["convert-glam025"] }
+nalgebra = { version = "0.32", features = ["convert-glam025"] }
 
-bevy = { version = "0.13.2", features = ["jpeg"], optional = true }
+bevy = { version = "0.13", features = ["jpeg"], optional = true }
+
+# Control
+zmq = { version = "0.10", optional = true }
+uuid = { version = "1.8", optional = true }
 
 # serde
-serde = { version = "1.0.198", features = ["derive"], optional = true }
-serde_json = { version = "1.0.116", optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = { version = "1.0", optional = true }
 bitcode = { version = "0.6", features = ["serde"], optional = true }
 
 # Web socket (server)
 websocket = { version = "0.27", default-features = false, features = ["sync"], optional = true }
-tokio-tungstenite = { version = "0.21.0", optional = true }
+tokio-tungstenite = { version = "0.21", optional = true }
 
 # Web socket (client)
 wasm-sockets = { version = "1.0", optional = true }
@@ -99,10 +111,13 @@ fastrand = { version = "2.0", optional = true }
 rcgen = { version = "0.12", default-features = false, features = ["ring"], optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-console_log = "1.0.0"
-wasm_thread = "0.3.0"
-console_error_panic_hook = "0.1.7"
+console_log = "1.0"
+wasm_thread = "0.3"
+console_error_panic_hook = "0.1"
 tracing-wasm = "0.2"
+
+[build-dependencies]
+cfg_aliases = "0.2"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
