--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,7 +88,7 @@ default_http_client = ["http_client_control", "standard_gc", "bevy_gui"]
 
 default_native = ["standard_control", "standard_gc", "bevy_gui"]
 
-default = ["default_native"]
+default = ["default_http_client"]
 
 [dependencies]
 rapier2d-f64 = { version = "0.19", features = ["simd-stable"] }
