--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,6 @@ gc = []
 standard_gc = ["gc"]
 http_client_gc = [
     "gc",
-    "async",
     "alternative_http",
     "dep:wasm-sockets",
     "dep:wasm-bindgen-futures",
@@ -34,7 +33,8 @@ control = []
 standard_control = [
     "control",
     "json",
-    "dep:zmq",
+    "dep:zeromq",
+    "dep:tokio"
 ]
 http_server = [
     "control",
@@ -62,7 +62,6 @@ json = ["serde", "dep:serde_json"]
 default_http = []
 alternative_http = []
 bitcode = ["serde", "dep:bitcode"]
-async = []
 wasm_server_runner = [
     "dep:anyhow",
     "dep:tracing-subscriber",
@@ -111,7 +110,7 @@ default_http_client = ["http_client_control", "standard_gc", "bevy_gui"]
 
 default_native = ["standard_control", "standard_gc", "bevy_gui"]
 
-default = ["default_http_client"]
+default = ["default_native"]
 
 [dependencies]
 rapier2d-f64 = { version = "0.19", features = ["simd-stable"] }
@@ -123,9 +122,10 @@ bevy = { version = "0.13", default-features = false, features = [
 url = { version = "2.5", optional = true }
 rand = { version = "0.8", optional = true }
 futures-util = { version = "0.3", features = ["sink"], optional = true }
+maybe-async = "0.2"
 
 # Control
-zmq = { version = "0.10", optional = true }
+zeromq = { version = "*", optional = true }
 
 # serde
 serde = { version = "1.0", features = ["derive"], optional = true }
