--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,22 +115,22 @@ http_server = [
     "dep:asynchronous-codec"
 ]
 
-default = ["native"]
+default = ["http_server"]
 
 
 [dependencies]
 tracing = "0.1"
 rand = { version = "0.8", optional = true }
-getrandom = { version = "*", optional = true }
+getrandom = { version = "0.2.15", optional = true }
 url = { version = "2.5", optional = true }
 futures-util = { version = "0.3", features = ["sink"], optional = true }
 websocket = { version = "0.27", optional = true }
 
-nalgebra = { version = "0.32", features = ["convert-glam025"]}
-rapier2d-f64 = { version = "0.20", features = ["simd-stable"], optional = true }
+nalgebra = { version = "0.33", features = ["convert-glam025"]}
+rapier2d-f64 = { version = "0.22", features = ["simd-stable"], optional = true }
 
-bevy = { version = "0.13", default-features = false, features = [
-    "jpeg","bevy_asset","bevy_core_pipeline","bevy_render","bevy_sprite","bevy_winit","multi-threaded","webgl2","x11","wayland"
+bevy = { version = "0.14.2", default-features = false, features = [
+    "jpeg","bevy_asset","bevy_core_pipeline","bevy_render","bevy_sprite","bevy_winit","multi_threaded","webgl2","x11","wayland"
 ], optional = true }
 
 # serde
@@ -141,7 +141,7 @@ bitcode = { version = "0.6", features = ["serde"], optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 zeromq = { version = "0.4", optional = true }
-tokio-tungstenite = { version = "0.23", optional = true }
+tokio-tungstenite = { version = "0.24", optional = true }
 
 # wasm-server-runner
 anyhow = { version = "1.0", optional = true }
@@ -149,13 +149,13 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = tr
 wasm-bindgen-cli-support = { version = "0.2", optional = true }
 axum = { version = "0.7", default-features = false, features = ["http1", "ws"], optional = true }
 axum-extra = { version = "0.9", features = [], optional = true }
-axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }
-axum-server-dual-protocol = { version = "0.6", optional = true }
+axum-server = { version = "0.7.1", features = ["tls-rustls"], optional = true }
+axum-server-dual-protocol = { version = "0.7", optional = true }
 directories = { version = "5", optional = true }
-tower-http = { version = "0.5", features = ["compression-full", "fs", "set-header", "trace"], optional = true }
+tower-http = { version = "0.6.1", features = ["compression-full", "fs", "set-header", "trace"], optional = true }
 tokio = { version = "1.37", default-features = false, features = ["full"], optional = true }
 http = { version = "1.1", optional = true }
-tower = { version = "0.4", optional = true }
+tower = { version = "0.5.1", optional = true }
 fastrand = { version = "2.0", optional = true }
 rcgen = { version = "0.12", default-features = false, features = ["ring"], optional = true }
 
@@ -172,7 +172,7 @@ bytes = { version = "1", optional = true }
 # tokio = { version = "1", features = ["full"], optional = true }
 tokio-util = { version = "0.7", features = ["compat"], optional = true }
 num-traits = { version = "0.2", optional = true }
-dashmap = { version = "5", optional = true }
+dashmap = { version = "6", optional = true }
 crossbeam-queue = { version = "0.3", optional = true }
 uuid = { version = "1", features = ["v4"], optional = true }
 regex = { version = "1", default-features = false, features = ["std", "unicode-perl"], optional = true }
