--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,15 @@ native = [
     "dep:tracing-subscriber"
 ]
 
+native_tui = [
+    "native_control",
+    "json",
+    "ratatui",
+    "native_gc",
+    "rapier2d-f64/simd-stable",
+    "dep:tracing-subscriber"
+]
+
 alternative_http_client = [
     "native_gui",
     "dep:wasm-sockets",
@@ -121,7 +130,7 @@ http_server = [
     "dep:asynchronous-codec"
 ]
 
-default = ["native"]
+default = ["native_tui"]
 
 [dependencies]
 tracing = "0.1"
@@ -147,6 +156,9 @@ bitcode = { version = "0.6", features = ["serde"], optional = true }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 zeromq = { version = "0.4", optional = true }
 tokio-tungstenite = { version = "0.24", optional = true }
+
+# tui
+ratatui = { version = "0.29", optional=true }
 
 # wasm-server-runner
 anyhow = { version = "1.0", optional = true }
